Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111338

Material editor broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.0, 6.6.0
    • 6.5.0 Beta2
    • Quick: 3D
    • None
    • Linux/X11
    • 62dd920ec (dev), fcce467c3 (6.5)

      The material editor doesn't respond to changing shaders via typing or File -> Import. I did some basic debugging and it seems that `materialadapter` is broken. I'll poke around for a while longer and see if I can find a fix.

      Likely unrelated to this bug, but without a dark theme the yellow syntax highlighting is unreadable.

      Edit: Dark mode and editor are working in 6.4 so this is a regression.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            stromme Christian
            clickingbuttons clicking buttons
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes