Fix regression in the custom material editor

The urls we get from the scene description format aren't always paths,
they can also be actual url, so extract the string and re-parse it as
user input, as we used to.

Fixes: QTBUG-111338
Change-Id: Ia4963f9fa4e518f7638f614b3fe1a47177773a17
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
Reviewed-by: Inho Lee <inho.lee@qt.io>
(cherry picked from commit 62dd920ec13b75389dccaf28da39f7f4cf931195)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>